bluec-tests/tests/invalid/types_fn_pointer/invalid_initializer4.c
int (*fn)(void) = get;

int main(void) {
    return 0;
}

int get(void) {
    return 1;
}
